<resources>
    <string name="app_name">Pokédex</string>
    <string name="pokedex_button">Pokédex</string>
    <string name="quiz_button">Quiz</string>
    <string name="pseudo_textview">Your pseudo : </string>
    <string name="nb_questions">Number of questions : </string>
    <string name="letsgo_button">Let\'s Go!</string>
    <string name="tous_pokemon">See all Pokémon</string>
    <string name="vedettes_textview">VIP Pokémon</string>
    <string name="title_evolution">Evolution</string>
    <string name="title_mega_evolution">Mega Evolution</string>
    <string name="title_pokedex_entries">Pokédex entries</string>
    <string name="searchbar">Search a Pokémon : </string>
    <string name="filtres">Sort by generation : </string>
    <string name="rb1">Gen I</string>
    <string name="rb2">Gen II</string>
    <string name="rb3">Gen III</string>
    <string name="rb4">Gen IV</string>
    <string name="rb5">Gen V</string>
    <string name="rb6">Gen VI</string>
    <string name="rb7">Gen VII</string>
    <string name="rb8">Gen VIII</string>
    <string name="gen1">1</string>
    <string name="gen2">2</string>
    <string name="gen3">3</string>
    <string name="gen4">4</string>
    <string name="gen5">5</string>
    <string name="gen6">6</string>
    <string name="gen7">7</string>
    <string name="gen8">8</string>
    <string name="pointage">Score : </string>
    <string name="question_suivante">Next Question</string>
    <string name="resultat">Result</string>
    <string name="aller_resultat">Go to the results page</string>
    <string name="rejouer">Play Again</string>
    <string name="retour_accueil">Go Back to Home Page</string>
    <string name="score_pourcentage10">Team Rocket has a better success rate than you.</string>
    <string name="score_pourcentage20">I mean, it could be worse. You could have been crushed by a Snorlax</string>
    <string name="score_pourcentage30">Misty\'s Psyduck could do better than you. And I mean it.</string>
    <string name="score_pourcentage40">Charizard may be stubborn, but at least he succeeds.</string>
    <string name="score_pourcentage50">Even Wobbuffet is faster than you.</string>
    <string name="score_pourcentage60">I\'m sure you would get along perfectly with Slowpoke</string>
    <string name="score_pourcentage70">Congrats! You have a passing grade.</string>
    <string name="score_pourcentage80">You\'re not to the level of an Alakazam yet, but it\'s coming along.</string>
    <string name="score_pourcentage90">Pokémon Trainer\'s blood flows in your veins.</string>
    <string name="score_pourcentage100">You wanna be the very best, don\'t you? </string>
    <string name="score_pourcentage_pile_100">You\'re a true Pokémon Master!</string>
    <string name="no_name">Guest</string>
</resources>
