<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/background3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:background="@drawable/coins_ronds">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/filtres"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView_rb">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/RB_gen1"
                android:orientation="horizontal"
                android:id="@+id/RB_filtres">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/RB_gen1"
                    android:layout_weight="50"
                    android:textSize="12dp"
                    android:tag="@string/gen1"
                    android:textColor="@android:color/white"
                    android:text="@string/rb1"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:tag="@string/gen2"
                    android:textColor="@android:color/white"
                    android:textSize="12dp"
                    android:id="@+id/RB_gen2"
                    android:text="@string/rb2"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/gen3"
                    android:layout_weight="50"
                    android:textColor="@android:color/white"
                    android:id="@+id/RB_gen3"
                    android:textSize="12dp"
                    android:text="@string/rb3"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/gen4"
                    android:layout_weight="50"
                    android:textColor="@android:color/white"
                    android:textSize="12dp"
                    android:id="@+id/RB_gen4"
                    android:text="@string/rb4"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/gen5"
                    android:id="@+id/RB_gen5"
                    android:layout_weight="50"
                    android:textSize="12dp"
                    android:textColor="@android:color/white"
                    android:text="@string/rb5"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/gen6"
                    android:layout_weight="50"
                    android:textColor="@android:color/white"
                    android:textSize="12dp"
                    android:id="@+id/RB_gen6"
                    android:text="@string/rb6"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/gen7"
                    android:layout_weight="50"
                    android:textColor="@android:color/white"
                    android:id="@+id/RB_gen7"
                    android:textSize="12dp"
                    android:text="@string/rb7"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/gen8"
                    android:layout_weight="50"
                    android:textColor="@android:color/white"
                    android:textSize="12dp"
                    android:id="@+id/RB_gen8"
                    android:layout_marginRight="10dp"
                    android:text="@string/rb8"/>

            </RadioGroup>

        </HorizontalScrollView>
        
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview_liste">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Linear_liste"
            android:orientation="vertical">

        </LinearLayout>


    </ScrollView>

</LinearLayout>