<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background3">

    <TextView
        style="@style/TextViewResultat2"
        android:text="@string/resultat"
        android:textSize="20dp"
        android:background="@drawable/coins_ronds"/>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background_quiz"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewResultat1"
            android:textSize="25dp"
            android:id="@+id/text_pseudo"/>

        <TextView
            style="@style/TextViewResultat1"
            android:textSize="40dp"
            android:id="@+id/text_score"/>

        <TextView
            style="@style/TextViewResultat1"
            android:layout_height="73dp"
            android:textSize="18dp"
            android:id="@+id/text_phrase_resultat"/>

    </LinearLayout>

    <Button
        style="@style/ButtonResultat"
        android:text="@string/rejouer"
        android:id="@+id/buttonRejouer"/>

    <Button
        style="@style/ButtonResultat"
        android:text="@string/retour_accueil"
        android:id="@+id/buttonRetour" />

</LinearLayout>