<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background">

    <LinearLayout
        style="@style/LinearInfoQuiz1">

        <TextView
            style="@style/TextViewInfoQuiz"
            android:text="@string/pseudo_textview"
            android:id="@+id/textview_pseudo"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="18dp"
            android:textAlignment="center"
            android:id="@+id/edittext_pseudo"/>

    </LinearLayout>

    <LinearLayout
        style="@style/LinearInfoQuiz1">

        <TextView
            style="@style/TextViewInfoQuiz"
            android:text="@string/nb_questions"
            android:id="@+id/textview_nbquestions"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:background="@drawable/background_numberpicker"
            android:id="@+id/numberpicker_nbquestions"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/letsgo_button"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:background="@drawable/button_background"
        android:id="@+id/button_letsgo"/>

</LinearLayout>